[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/AndroidAssassin-WXXY.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://texture_ui/menu/resume_button.png" type="Texture" id=3]
[ext_resource path="res://texture_ui/menu/exit_button.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float amount : hint_range(0,10);
void fragment() {
    COLOR.rgb = textureLod(SCREEN_TEXTURE,SCREEN_UV,amount).rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/amount = 2.2

[sub_resource type="DynamicFont" id=3]
size = 150
outline_size = 10
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.36604, 1 ),
"update": 0,
"values": [ 0.0, 2.25 ]
}

[sub_resource type="Animation" id=5]
resource_name = "New Anim"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PauseLabel:custom_fonts/font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0.678431, 0, 1 ), Color( 1, 0.984314, 0, 1 ), Color( 0.0313726, 1, 0, 1 ), Color( 0, 1, 1, 1 ), Color( 0.101961, 0, 1, 1 ), Color( 1, 0, 0.890196, 1 ), Color( 1, 0, 0, 1 ) ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.19128
margin_top = -0.647095
margin_right = 5.19128
margin_bottom = -0.647095
color = Color( 0, 0, 0, 0.941176 )

[node name="PauseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -327.67
margin_top = 113.604
margin_right = 237.33
margin_bottom = 265.604
custom_fonts/font = SubResource( 3 )
text = "PAUSE"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -168.0
margin_right = 268.0
margin_bottom = 168.0
custom_constants/separation = 26

[node name="Resume" type="TextureButton" parent="VBoxContainer"]
margin_right = 536.0
margin_bottom = 210.0
texture_normal = ExtResource( 3 )

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
margin_top = 236.0
margin_right = 536.0
margin_bottom = 446.0
texture_normal = ExtResource( 4 )

[node name="BlurTransition" type="AnimationPlayer" parent="."]
anims/Transition = SubResource( 4 )

[node name="TextRainbow" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 5 )
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
